K8S-Manifests/frontend-manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: mohamedharoon0/lab-management-system-frontend:latest  
        ports:
        - containerPort: 80
        resources:
           limits:
             cpu: "0.5"
             memory: "512Mi"
           requests:
              cpu: "0.1"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP  
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend
